@startuml:
class Cliente {
    - id
    - apellido
    - nombre 
    - email
}

class Empresa {
    - id
    - razon_social
    - email
}

class Equipo {
    - id
    - nombre
    - escudo
    - pais
    - puntaje
}


class Apuesta {
    - id
    - fecha
    - monto
    - monto_minimo
    - equipo_ganador
}

class Cuota {
    - id
    - probabilidad_local
    - probabilidad_empate
    - probabilidad_visitante
}

class Partido {
    - id
    - fecha
    - equipo_local
    - equipo_visitante
    - finalizado
    - ganador
    - goles_local
    - goles_visitante
}

Partido *-- Equipo: equipo_local
Partido *-- Equipo: equipo_visitante

Cliente --> Apuesta: Realiza apuesta
Cliente --|> Model
Empresa --|> Model
Equipo --|> Model
Partido --|> Model

Cuota -- Partido
Apuesta --> Partido: Se realiza sobre
Cuota --|> Model

@enduml